# spoofer

./: .gitignore  Cargo.toml  README.md
src/: db.rs  events.rs  lib.rs  main.rs  temp.rs
src/bus/: bus.rs  event.rs  handler.rs  mod.rs
src/connector/: bitstamp_connector.rs  builder.rs  config.rs  connector.rs  connector_binance.rs  connector_bitstamp.rs  connector_conibase.rs  connector_kraken.rs  errors.rs  mod.rs  services.rs  types.rs
src/connector/services/: mod.rs  parser.rs  ticker_map.rs  validators.rs  websocket.rs
src/connectors/: connector.rs  connector_binance.rs  mod.rs
src/db/: client.rs  errors.rs  mod.rs  saver.rs
src/domain/: book_stats.rs  events.rs  level2.rs  level_stat.rs  mod.rs  order_book.rs  order_stat.rs
src/level2/: book_side.rs  book_stats.rs  errors.rs  events.rs  level_tick.rs  mod.rs  order_book.rs  repo.rs  services.rs  traits.rs
src/level2/services/: mod.rs  quantity.rs
src/services/: level2.rs  mod.rs  spoofer.rs
src/shared/: bus.rs  datetime.rs  exchange.rs  logger.rs  mod.rs  types.rs  utils.rs
src/shared/errors/: errors.rs  mod.rs  services.rs
src/shared/event/: errors.rs  mod.rs  repo.rs  services.rs
src/shared/utils/: buffer.rs  buffer_service.rs  mod.rs  other.rs
src/signal/: arbitrage_monitor.rs  error.rs  mod.rs  spoofer.rs
src/signal/arbitrage_monitor/: mod.rs  monitor.rs  repo.rs  signal.rs
src/spoofer/: events.rs  mod.rs  services.rs  usecases.rs
src/trade/: errors.rs  events.rs  mod.rs  repo.rs  trade_stats.rs  trade_store.rs  traits.rs
tests/: book_stats.rs
tests/signal/: mod.rs
(+6 files in other folders)
