[package]
name = "spoofing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = "0.4.42"
futures-util = "0.3"
url = "2.5.7"
dashmap = "7.0.0-rc2"
crossbeam = "0.8.4"
arc-swap = "1.7.1"
either = "1.15.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0.69"
async-stream = "0.3.6"
futures = "0.3.31"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
once_cell = "1.21.3"
clickhouse = "0.14.1"
pin-utils = "0.1.0"
